# WTFJH

./: .gitignore  .gitmodules  .travis.yml  BasePreferences.plist  BuildConfig.py  CODEOWNERS.md  CompileDefines.mm  CompileDefines.xm  HackingGuide.md  InstallTheos.sh  LICENSE  LatestBuild.deb  Makefile  ManualObfuscation.py  README.md  Setup.sh  SignatureDatabase.md  SignatureDatabaseSample.plist  Template.py  ThirdPartyTemplate.xm  Tweak.xm  VERSION  build.py  control  gitignore  obj  test.sh
.github/: ISSUE_TEMPLATE.md
.theos/: last_package
CIScripts/: DownloadFrida.py  InstallTheos.sh
Cycript.framework/: Cycript.REMOVED.git-id
DOCS/: CODEOWNERS.md  HackingGuide.md
DOCS/TODO/: CoreTelephonySymbol.txt  README.md  SignatureDatabase.md  SignatureDatabaseSample.plist
Hooks/: Global.h  RuntimeUtils.h  RuntimeUtils.m  SharedDefine.pch  Utils.h  Utils.m
Hooks/API/: AntiAntiDebugging.xm  AppleAccount.xm  CommonCryptor.xm  CommonDigest.xm  CommonHMAC.xm  CommonKeyDerivation.xm  CoreLocation.xm  CoreLocation.xm.empty  CoreTelephony.xm  Keychain.xm  LSApplication.xm  MachO.xm  NSData.xm  NSFileHandle.xm  NSFileManager.xm  NSHTTPCookie.xm  (+21 more)
Introspy-Analyzer/: .gitignore  README.md
Preferences/: Preferences.plist.Sample  README.md
TODO/: README.md  SignatureDatabase.md
ThirdPartyTools/: .gitignore  README.md
Tools/: ClangPlugin  README.md
Tools/ClangPlugin/: CMakeLists.txt  TestClang.sh  WTFJH.cpp
Tools/ClangPlugin/TestingFiles/: FclBlowfish.h  FclBlowfish.m  HelloWorld.m  Test.h
WTFJHAnalyzer/: MANIFEST.in
todo/: CoreTelephonySymbol.txt  README.md
(+134 files in other folders)
